# src/api/api.go
@@ -70,7 +70,7 @@ func InitServer(cfg *config.Config) {
         carModelColors := v1.Group("/car-model-colors",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
         carModelYears := v1.Group("/car-model-years",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
         carModelPriceHistories := v1.Group("/car-model-price-histories",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-
+        carModelImage := v1.Group("/car-model-images",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
 
 
         //Test
@@ -102,7 +102,9 @@ func InitServer(cfg *config.Config) {
 		routers.CarModelColor(carModelColors,cfg)
 		routers.CarModelYear(carModelYears,cfg)
 		routers.CarModelPriceHistory(carModelPriceHistories,cfg)
+        routers.CarModelImage(carModelImage,cfg)
 
+		r.Static("/static" , "./uploads")
 	}
 
 	log.Println("InitServer - API groups registered.")
