# src/services/car_model_service.go
@@ -25,6 +25,7 @@ func NewCarModelService(cfg *config.Config) *CarModelService {
 				{string: "CarModelColors.Color"},
 				{string: "CarModelYears.PersianYear"},
 				{string: "CarModelYears.CarModelPriceHistories"},
+				{string: "CarModelImages.Image"},
 			},
 		},
 	}
